<resources>
    <string name="app_name">Prisma</string>
    <string name="saved_images">Saved Images</string>
    <string name="save_image_gallery">Save Image Gallery</string>
    <string name="edit_image">Edit Image</string>
    <string name="edit_new_image">Edit New Image</string>
    <string name="let_s_create_something_new">Let\'s create something new!</string>
    <string name="image_filters">Image Filters</string>
    <string name="apply_filter">Apply Filter</string>

    <!--Title for action button-->
    <string name="button_filter">Filters</string>
    <string name="button_mirror">Mirror</string>
    <string name="button_blur">Blur</string>
    <string name="button_text">Text</string>
    <string name="button_cut">Cut</string>

    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_menu">menu</string>

    <string name="nameUser">Prisma</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="count_image">Count Image:</string>
    <string name="is_this_your_first_time_here">Is this your first time here?</string>
    <string name="register">Register</string>
    <string name="image">image</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="sign_out">Sign out</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="back_to_image">Back to Image</string>
    <string name="logout">Logout</string>

    <string-array name="fontSize">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array>

    <string-array name="appTheme">
        <item>Day</item>
        <item>Night</item>
    </string-array>

    <string-array name="colorSetFilter">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>
</resources>