<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activities.editimage.EditImageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">


        <LinearLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/primary"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageMenu"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_menu_gallery"
                android:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:src="@drawable/ic_back_original"
                android:tint="@color/white" />


            <TextView
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/apply_filter"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageSave"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_done"
                    android:tint="@color/white" />

                <ProgressBar
                    android:id="@+id/savingProgressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/scroll"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:shadowRadius="1"
                    android:text="@string/button_filter"
                    android:textColor="@color/white"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/buttonBlur"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/button_blur" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/button_text" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/button_cut" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/button_mirror" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagePreview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/filterRecyclerView"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader" />

        <ProgressBar
            android:id="@+id/previewProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/filterRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filterRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_105sdp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/scroll"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/item_container_filter" />

        <ProgressBar
            android:id="@+id/imageFiltersProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/filterRecyclerView"
            app:layout_constraintEnd_toEndOf="@id/filterRecyclerView"
            app:layout_constraintStart_toStartOf="@id/filterRecyclerView"
            app:layout_constraintTop_toTopOf="@id/filterRecyclerView" />

        <fragment
            android:id="@+id/navHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader"
            app:navGraph="@navigation/main" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_navigation_header"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>